# retail-etl-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/postgres/: init.sql
sql/analytics/: create_analytics_tables.sql
sql/staging/: create_staging_tables.sql
src/: pipeline.py
src/extract/: olist_extractor.py
src/load/: postgres_loader.py
src/transform/: customers_transformer.py  orders_transformer.py  products_transformer.py
src/utils/: db_connection.py  logger.py
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py
