[project]
name = "retail-etl-pipeline"
version = "0.1.0"
description = "End-to-end ETL pipeline for Olist Brazilian E-Commerce dataset"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
